# nexus-play

./: .claudeignore  .gitignore
docs/: Nexus_Family_Pass_UI_Specification.txt
docs/md/: Nexus_Family_Pass_PRD_v7.md  SCHEMA.md
nexus-family-pass-ui/: README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
nexus-family-pass-ui/src/: index.html  main.ts  styles.scss
nexus-family-pass-ui/src/app/: app.component.ts  app.config.ts  app.routes.ts
nexus-family-pass-ui/src/app/core/data/: index.ts  mock-activities.data.ts  mock-bookings.data.ts  mock-users.data.ts  mock-venues.data.ts
nexus-family-pass-ui/src/app/core/guards/: auth.guard.ts  guest.guard.ts  role.guard.ts
nexus-family-pass-ui/src/app/core/interceptors/: auth.interceptor.ts  error.interceptor.ts  loading.interceptor.ts
nexus-family-pass-ui/src/app/core/models/: activity.model.ts  booking.model.ts  child.model.ts  index.ts  notification.model.ts  user.model.ts
nexus-family-pass-ui/src/app/core/services/: activity.service.ts  auth.service.ts  booking.service.ts  child.service.ts  index.ts  loading.service.ts  notification.service.ts
nexus-family-pass-ui/src/app/features/admin/pages/bookings/: bookings.component.ts
nexus-family-pass-ui/src/app/features/admin/pages/companies/: companies.component.ts
nexus-family-pass-ui/src/app/features/admin/pages/dashboard/: dashboard.component.ts
nexus-family-pass-ui/src/app/features/admin/pages/reports/: reports.component.ts
nexus-family-pass-ui/src/app/features/admin/pages/settings/: settings.component.ts
nexus-family-pass-ui/src/app/features/admin/pages/users/: users.component.ts
nexus-family-pass-ui/src/app/features/admin/pages/venues/: venues.component.ts
nexus-family-pass-ui/src/app/features/auth/pages/forgot-password/: forgot-password.component.ts
nexus-family-pass-ui/src/app/features/auth/pages/login/: login.component.html  login.component.scss  login.component.ts
nexus-family-pass-ui/src/app/features/auth/pages/reset-password/: reset-password.component.html  reset-password.component.scss  reset-password.component.ts
nexus-family-pass-ui/src/app/features/hr/pages/dashboard/: dashboard.component.ts
nexus-family-pass-ui/src/app/features/hr/pages/employees/: employees.component.ts
nexus-family-pass-ui/src/app/features/hr/pages/reports/: reports.component.ts
nexus-family-pass-ui/src/app/features/hr/pages/settings/: settings.component.ts
nexus-family-pass-ui/src/app/features/hr/pages/subscription/: subscription.component.ts
nexus-family-pass-ui/src/app/features/parent/pages/activities-browse/: activities-browse.component.ts
nexus-family-pass-ui/src/app/features/parent/pages/activity-detail/: activity-detail.component.ts
nexus-family-pass-ui/src/app/features/parent/pages/bookings/: bookings.component.ts
nexus-family-pass-ui/src/app/features/parent/pages/child-form/: child-form.component.ts
nexus-family-pass-ui/src/app/layouts/admin-layout/: admin-layout.component.ts
nexus-family-pass-ui/src/app/layouts/hr-layout/: hr-layout.component.ts
nexus-family-pass-ui/src/app/layouts/parent-layout/: parent-layout.component.ts
nexus-family-pass-ui/src/app/layouts/venue-layout/: venue-layout.component.ts
nexus-family-pass-ui/src/app/shared/components/: index.ts
nexus-family-pass-ui/src/app/shared/components/empty-state/: empty-state.component.ts
nexus-family-pass-ui/src/app/shared/components/footer/: footer.component.ts
nexus-family-pass-ui/src/app/shared/components/header/: header.component.ts
nexus-family-pass-ui/src/app/shared/components/loading-spinner/: loading-spinner.component.ts
nexus-family-pass-ui/src/app/shared/components/modals/: index.ts
nexus-family-pass-ui/src/app/shared/components/sidebar/: sidebar.component.ts
nexus-family-pass-ui/src/app/shared/components/skeleton-loader/: skeleton-loader.component.ts
nexus-family-pass-ui/src/assets/: README.md
nexus-family-pass-ui/src/environments/: environment.prod.ts  environment.ts
nexus-family/nexus-backend/: README.md
nexus-family/venue-onboarding/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  run.py
nexus-family/venue-onboarding/alembic/: env.py  script.py.mako
nexus-family/venue-onboarding/alembic/versions/: 001_initial_schema.py
nexus-family/venue-onboarding/app/: __init__.py  config.py  main.py
nexus-family/venue-onboarding/app/api/: __init__.py
nexus-family/venue-onboarding/app/api/v1/: __init__.py  dependencies.py  router.py
nexus-family/venue-onboarding/app/api/v1/endpoints/: __init__.py  activities.py  health.py  vendors.py  venues.py  webhooks.py
nexus-family/venue-onboarding/app/core/: __init__.py  database.py  exceptions.py  logging_config.py  security.py
nexus-family/venue-onboarding/app/integrations/: __init__.py
nexus-family/venue-onboarding/app/integrations/ai/: __init__.py  activity_inferrer.py  embeddings.py  gemini_client.py  quality_scorer.py
nexus-family/venue-onboarding/app/integrations/ai/langchain/: __init__.py  chains.py  llm.py  prompts.py  tools.py
nexus-family/venue-onboarding/app/integrations/ai/langgraph/: __init__.py  nodes.py  state.py  workflows.py
nexus-family/venue-onboarding/app/integrations/google_places/: __init__.py  client.py  mapper.py  models.py
nexus-family/venue-onboarding/app/integrations/mcp/: __init__.py  server.py  tools.py
nexus-family/venue-onboarding/app/models/: __init__.py  activity.py  base.py  quality_score.py  review.py  vendor.py  venue.py
nexus-family/venue-onboarding/app/schemas/: __init__.py  activity.py  common.py  vendor.py  venue.py
nexus-family/venue-onboarding/app/services/: __init__.py  activity_service.py  base.py  vendor_service.py  venue_service.py
nexus-family/venue-onboarding/app/utils/: __init__.py  pricing.py  slug.py  validators.py
nexus-family/venue-onboarding/scripts/: generate_mock_pricing.py  ingest_venues.py  process_reviews.py  seed_vendor_accounts.py
nexus-family/venue-onboarding/tests/: __init__.py  conftest.py
(+21 files in other folders)
